<resources>
    <string name="app_name">Etiketa</string>
    <string name="etiketa">Etiketa</string>

    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="releaseYear">Release year</string>

    <string name="save">Save</string>

    <string name="successfully_saved">Successfully saved</string>
    <string name="error_occured">An error occurred</string>

    <string name="id3_older_format">This MP3 file uses an older metadata format, that does not support embedded images.</string>
    <string name="picture_not_found">No embedded picture found.</string>

    <string name="empty_folder">This folder is empty.</string>
    <string name="internal_storage">Internal storage</string>

    <string name="settings">Settings</string>

    <plurals name="numberOfFiles">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>

    <string name="numberOfFilesEmpty">Empty folder</string>
    <string name="node_name">Node name</string>
    <string name="remained_unchanged">Data has remained unchanged</string>
    <string name="tag_editor">Tag editor</string>
    <string name="format_unsupported">This file format is unsupported</string>
    <string name="unable_to_read">This file cannot be read</string>
    <string name="sort_order">Sort order</string>
    <string name="group_folders">Group folders</string>
    <string name="show_hidden">Show hidden</string>
    <string name="name_ascending">Name ascending</string>
    <string name="name_descending">Name descending</string>
    <string name="file_name">File name</string>
    <string name="absolute_path">Absolute path</string>
    <string name="last_modified">Last modified</string>
    <string name="size">Size</string>
    <string name="unsaved_changes_details">The metadata changes to this file have not been saved. Do you want to save them or discard them?</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="display_theme_light">Light</string>
    <string name="display_theme_dark">Dark</string>
    <string name="display_theme_battery_saver">Set by Battery Saver</string>
    <string name="display_theme_system">Follow System</string>
    <string name="choose_theme">Choose theme</string>
    <string name="true_black_color">Black color instead of dark grey</string>
    <string name="display">Display</string>

</resources>
