<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/browser_menu_sort_by"
        app:showAsAction="never"
        android:title="Sort by" >

        <menu>

            <group
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/browser_menu_sort_by_name"
                    android:title="Name" />

                <item
                    android:id="@+id/browser_menu_sort_by_last_modified"
                    android:title="Last modified" />
            </group>

        </menu>

    </item>

    <item
        android:id="@+id/browser_menu_sort_order"
        app:showAsAction="never"
        android:title="@string/sort_order" >

        <menu>

            <item
                android:id="@+id/browser_menu_folders"
                android:checkable="true"
                android:checked="true"
                android:title="@string/group_folders" />

            <group
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/browser_menu_sort_ascending"
                    android:title="@string/name_ascending" />

                <item
                    android:id="@+id/browser_menu_sort_descending"
                    android:title="@string/name_descending" />
            </group>

        </menu>

    </item>

    <item
        android:id="@+id/browser_menu_sort_hidden"
        android:checkable="true"
        android:checked="false"
        android:title="@string/show_hidden" />

    <item
        android:id="@+id/browser_menu_settings"
        app:showAsAction="never"
        android:title="@string/settings" />

</menu>