<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_file_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/AppTheme.Text.Body3"/>

    <TextView
        android:id="@+id/dialog_file_info_name_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/dialog_file_info_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absolute_path"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/AppTheme.Text.Body3"/>

    <TextView
        android:id="@+id/dialog_file_info_path_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/dialog_file_info_modified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/AppTheme.Text.Body3"
        android:text="@string/last_modified" />

    <TextView
        android:id="@+id/dialog_file_info_modified_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="" />

    <TextView
        android:id="@+id/dialog_file_info_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/AppTheme.Text.Body3"
        android:text="@string/size" />

    <TextView
        android:id="@+id/dialog_file_info_size_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="" />
</LinearLayout>